s3/tests_ex32/tough_test/errors.txt
cccgcc.c:6:2: error: extraneous closing brace ('}')
}}
 ^
1 error generated.
